# EyeHelpYou

./: .gitignore  Dockerfile  README.md  constants.py  fly.toml  main.py  pyproject.toml  settings_manager.py  utils.py
Chains/: __init__.py  command_chain.py  models.py  processor.py  processor_chain.py  processor_schemas.py  router_chain.py  text_to_voice.py  utils.py  voice_to_text.py
Telegram/: admin_handlers.py  bot.py  commands.py  handlers.py  messages.py  middleware.py  state.py  user_handlers.py
data/: settings.json
