[project]
name = "imageguide"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.26.0",
    "aiogram-tests>=1.0.3",
    "ddgs>=9.11.2",
    "duckduckgo-search>=8.1.1",
    "edge-tts>=7.2.7",
    "groq>=1.0.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.17",
    "langchain-ollama>=1.0.1",
    "ollama>=0.6.1",
    "openai-whisper>=20250625",
    "pillow>=12.1.1",
    "pydub>=0.25.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.6",
]
