[project]
name = "imageguide"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.26.0",
    "audioop-lts>=0.2.2",
    "ddgs>=9.11.2",
    "edge-tts>=7.2.7",
    "groq>=1.1.2",
    "langchain-core>=1.2.17",
    "langchain-openai>=1.1.10",
    "langsmith>=0.7.10",
    "numpy>=2.4.4",
    "opencv-python-headless>=4.13.0.92",
    "pydantic>=2.12.5",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.1",
    "restrictedpython>=8.1",
]

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
